--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   });
 
   // קישור ל־Google Sheets כ־CSV
-  var sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQaLyMMiBij0TIcXy0Bq7nBVlwYuS97eGNzIQHg75Xo7gO7IKi1vnjT8EWwuXNvVkz1UK3ZkM-Ebshi/pub?gid=0&single=true&output=csv";
+  var sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT6Q0gCjH3psmyXUBe9EQGLNGi6MVesf8yF-4b8qwEl4y2oMmNaD3SRejk7b6f0XQFL5tE7xpiP19Ph/pub?output=csv";
 
   Papa.parse(sheetUrl, {
     download: true,
