--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       var markers = [];
 
       results.data.forEach(function(row) {
-        var lat = parseFloat((row["רוחב"] || "").trim());
-        var lng = parseFloat((row["אורך"] || "").trim());
+        var lat = parseFloat((row["1רוחב"] || "").trim());
+        var lng = parseFloat((row["1אורך"] || "").trim());
 
         if (!isNaN(lat) && !isNaN(lng)) {
           var marker = L.marker([lat, lng], { icon: pumpkinIcon })
