--- a/index_backup.html
+++ b/index_backup.html
@@ -31,7 +31,7 @@
   });
 
   // כתובת ה־Google Sheet כ־CSV
-  var sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT6Q0gCjH3psmyXUBe9EQGLNGi6MVesf8yF-4b8qwEl4y2oMmNaD3SRejk7b6f0XQFL5tE7xpiP19Ph/pub?output=csv";
+ # var sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT6Q0gCjH3psmyXUBe9EQGLNGi6MVesf8yF-4b8qwEl4y2oMmNaD3SRejk7b6f0XQFL5tE7xpiP19Ph/pub?output=csv";
 
   Papa.parse(sheetUrl, {
     download: true,
